2015-02-24  Alan Modra  <amodra@gmail.com>

	PR 18010
	* powerpc.cc (Powerpc_relocate_functions::addr16_ds): Always
	complain if value is not a multiple of four.
	(Target_powerpc::Relocate::relocate): Correct handling of
	R_POWERPC_GOT_TPREL16 and R_POWERPC_GOT_TPREL16_LO for ppc64.

2015-02-21  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.ac (default_size): Set to 32 for x32.
	* configure: Regenerated.

2015-02-18  Alan Modra  <amodra@gmail.com>

	PR 17954
	* powerpc.cc (Global_symbol_visitor_opd::operator()): Set default
	visibility.

2015-02-17  Rafael Ávila de Espíndola <rafael.espindola@gmail.com>

	* gc.h (Garbage_collection::add_reference): Don't use find.

2015-02-17  Rafael Ávila de Espíndola <rafael.espindola@gmail.com>

	* object.cc (write_local_symbols): avoid std::vector copy.

2015-02-17  Rafael Ávila de Espíndola <rafael.espindola@gmail.com>

	* merge.cc (get_output_offset): Use upper_bound instead of lower_bound.

2015-02-09  Mark Wielaard  <mjw@redhat.com>

	* gdb-index.cc (Gdb_index_info_reader::visit_top_die): Recognize
	DW_LANG_Fortran03 and DW_LANG_Fortran08.

2015-02-16  Cary Coutant  <ccoutant@google.com>

	PR gold/13577
	PR gold/16992
	* layout.cc (Layout::finish_dynamic_section): Don't set DT_SYMBOLIC or
	DF_SYMBOLIC if --dynamic-list option is used.
	* options.cc (General_options::finalize): --dynamic-list is not
	mutually exclusive with -Bsymbolic.
	* symtab.h (Symbol::is_preemptible): Don't exclude dynamic symbols not
	listed in --dynamic-list.
	* testsuite/Makefile.am (dynamic_list_lib2.so): Add
	-Bsymbolic-functions.
	* testsuite/Makefile.in: Regenerate.

2015-02-16  Cary Coutant  <ccoutant@google.com>

	PR gold/17971
	* incremental.cc: Remove redundant include of "output.h".

2015-02-12  Jing Yu  <jingyu@google.com>

	* aarch64-reloc.def (TLSLE_MOVW_TPREL_G2, TLSLE_MOVW_TPREL_G1,
	TLSLE_MOVW_TPREL_G1_NC, TLSLE_MOVW_TPREL_G0, TLSLE_MOVW_TPREL_G0_NC,):
	New relocation.
	* aarch64.cc (Target_aarch64::Scan::local): Add cases for new